test/compilable/imports/test313c3.d
module imports.test313c3;

public import imports.test313d;
