test/fail_compilation/imports/fail313b.d
module imports.fail313b;

public import imports.fail313stdio;
